deploy/base/solra-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: solra-ingress
  namespace: solra
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/ssl-redirect: "true"  # ✅ HTTP 요청 시 HTTPS로 리디렉션
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"  # ✅ 일부 버전에서 명시 필요
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - service.solra.fisa
      secretName: solra-tls-cert
  rules:
    - host: service.solra.fisa
      http:
        paths:
          - path: /api(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: solra-backend
                port:
                  number: 8080

          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: solra-frontend
                port:
                  number: 80
